--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "transceiver",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Channel based event engine with request/reply pattern for node & browser",
   "main": "dist/transceiver.js",
   "scripts": {
@@ -13,7 +13,19 @@
     "type": "git",
     "url": "https://github.com/risq/transceiver.git"
   },
-  "keywords": ["events", "request", "reply", "node", "browser", "event", "emitter", "channel", "radio", "emit", "on"],
+  "keywords": [
+    "events",
+    "request",
+    "reply",
+    "node",
+    "browser",
+    "event",
+    "emitter",
+    "channel",
+    "radio",
+    "emit",
+    "on"
+  ],
   "author": "risq <valentin.ledrapier@gmail.com>",
   "license": "MIT",
   "bugs": {
