--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "transceiver",
   "version": "0.3.2",
-  "description": "Channel based event engine with request/reply pattern for node & browser",
+  "description": "Channel based event bus with request/reply pattern, using promises. For node & browser.",
   "main": "dist/transceiver.js",
   "scripts": {
     "test": "gulp",
@@ -24,7 +24,10 @@
     "channel",
     "radio",
     "emit",
-    "on"
+    "on",
+    "promise",
+    "pubsub",
+    "bus"
   ],
   "author": "risq <valentin.ledrapier@gmail.com>",
   "license": "MIT",
