--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,6 @@ script: "gulp coverage"
 after_success:
   - npm install -g codeclimate-test-reporter
   - codeclimate-test-reporter < coverage/lcov.info
+branches:
+  except:
+    - es7_decorators
