--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: node_js
 node_js:
-  - "io.js"
-  - "0.10"
   - "0.12"
-  - "4.1"
-  - "4.0"
+  - "4"
+  - "5"
+  - "6"
+  - "stable"
 sudo: false
 script: "gulp coverage"
 after_success:
