--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/transceiver.js",
   "scripts": {
     "test": "gulp",
+    "lint": "gulp lint",
     "test-browser": "gulp test-browser",
+    "watch": "gulp watch",
     "build": "gulp build",
     "coverage": "gulp coverage"
   },
@@ -29,56 +31,51 @@
     "pubsub",
     "bus"
   ],
-  "author": "risq <valentin.ledrapier@gmail.com>",
+  "author": "Valentin Ledrapier <valentin.ledrapier@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/risq/transceiver/issues"
   },
   "homepage": "https://github.com/risq/transceiver",
   "devDependencies": {
-    "babel-core": "^5.2.17",
-    "babel-eslint": "^4.0.5",
-    "babelify": "^6.0.0",
-    "browserify": "^11.0.1",
-    "chai": "^3.2.0",
-    "del": "^1.1.1",
-    "esperanto": "^0.7.4",
-    "glob": "^5.0.14",
-    "gulp": "^3.8.10",
-    "gulp-babel": "^5.0.0",
-    "gulp-eslint": "^1.0.0",
-    "gulp-file": "^0.2.0",
+    "babel-core": "^6.3.26",
+    "babel-eslint": "^4.1.6",
+    "babel-loader": "^6.2.0",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.3.13",
+    "chai": "^3.4.1",
+    "del": "^2.2.0",
+    "glob": "^6.0.3",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.1",
+    "gulp-eslint": "^1.1.1",
     "gulp-filter": "^3.0.0",
-    "gulp-istanbul": "^0.10.0",
-    "gulp-jscs": "^3.0.1",
-    "gulp-livereload": "^3.4.0",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-mocha": "^2.0.0",
-    "gulp-notify": "^2.1.0",
+    "gulp-istanbul": "^0.10.3",
+    "gulp-jscs": "^3.0.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-load-plugins": "^1.1.0",
+    "gulp-mocha": "^2.2.0",
     "gulp-plumber": "^1.0.1",
-    "gulp-rename": "^1.2.0",
-    "gulp-sourcemaps": "^1.3.0",
-    "gulp-uglify": "^1.2.0",
-    "isparta": "^3.0.3",
-    "mocha": "^2.1.0",
-    "run-sequence": "^1.0.2",
-    "sinon": "^1.12.2",
-    "sinon-chai": "^2.7.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0",
-    "watchify": "^3.3.1"
-  },
-  "babelBoilerplateOptions": {
-    "entryFileName": "transceiver",
-    "mainVarName": "transceiver",
-    "mochaGlobals": [
-      "stub",
-      "spy",
-      "expect"
-    ]
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
+    "isparta": "^4.0.0",
+    "json-loader": "^0.5.3",
+    "mocha": "^2.3.4",
+    "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0",
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^1.12.9",
+    "webpack-stream": "^3.1.0"
   },
   "dependencies": {
     "debug": "^2.2.0",
     "event-emitter": "^0.3.4"
+  },
+  "babelBoilerplateOptions": {
+    "entryFileName": "transceiver",
+    "mainVarName": "transceiver"
   }
 }
